--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "AI Summarizer for your daily work",
     "version": "1.0",
     "description": "This extension uses AI to summarize articles,blogs and help you focus on your work.",
-    "permissions": ["scripting","activeTab","storage"],
+    "permissions": ["scripting","activeTab","storage","tabs"],
     "action": {
         "default_popup": "popup.html",
         "default_icon": "icon.png"
